Fixed the black bar not being visible in medium view and over

--- a/src/sass/views/_smallViewOver.scss
+++ b/src/sass/views/_smallViewOver.scss
@@ -42,10 +42,6 @@
 	}
 }
 
-#gc-info {
-	display: none;
-}
-
 [dir=rtl] {
 	#gc-tctr {
 		> {
